Redesign my git config file
Split aliases in three sections:
- plain shortcuts
- querying commands
- editing commands

--- a/configs/.config/git/config
+++ b/configs/.config/git/config
@@ -83,46 +83,58 @@
   rebase = true
 
 
-; Common shortcuts. Caveat: some of these dates from my time when I was working
-; with git-svn. The most useful ones are: st, ci, br, sed, squash.
+; My aliases.
+; The most useful ones are: st, ci, co, br, sed, squash.
 [alias]
-  st = status --ignore-submodule=all -sb
+  ; Shortcuts
+
+  br = branch
   ci = commit
   co = checkout
-  br = branch
-  sed = "!git ls-files -- . | xargs -L 1 sed -i"
-  graphviz = "!f() { echo 'digraph git {' ; git log --pretty='format:  %h -> { %p }' \"$@\" | sed 's/[0-9a-f][0-9a-f]*/\"&\"/g' ; echo '}'; }; f"
-  bd = branch -D
-; Prints untracked files
-  untracked = "!cd \"$(git rev-parse --show-cdup)\" && git clean -n -d | cut -c 14- | sed -e \"s/\\/$//\" | while read i; do echo /$i; done"
-; Add all untracked files to .git/info/exclude
-  ignoreall = "!cd \"$(git rev-parse --show-cdup)\" && git clean -n -d | cut -c 14- | sed -e \"s/\\/$//\" >> $(git rev-parse --git-dir)/info/exclude"
-; Prints the repo's description if it exists.
-  which = !cat $(git rev-parse --git-dir)/description
-; Prints a graph about the current state of the branches
-  confused = log --graph --decorate --pretty=format:\"%Cgreen%h%d %Cred%ad %Creset%s\" --branches --date-order --date=short --tags
-; Returns the upstream branch. TODO: Default to <first remote found>/master ?
-  upstream = "!f() { git rev-parse --verify -q $1 >/dev/null 2>&1 && git rev-parse --symbolic-full-name $1 2>/dev/null; }; f @{u} || f origin/master"
-; Returns the 'ancestor' hash at which the current branch is based on
-  ancestor = !git merge-base HEAD $(git upstream)
-; Rebase against the ancestor
-  reroll = !git rebase -i $(git ancestor)
-; Smaller log against the ancestor
-  compact-log = !git log --pretty=format:\"%B\" $(git ancestor)..HEAD
-; Squash all the commits against the ancestor into a single commit
-  squash = "!OLDLOG=$(git compact-log); git reset --soft $(git ancestor) && git commit -m \"$OLDLOG\""
-; Blames against a branch given as an argument
-  blamebranch = "!foo() { git diff --name-only \"$@\" | while read i; do git blame --date=short -C $i | cut -d '(' -f 2 | cut -d ' ' -f 1; done | sort -f | uniq -ic | sort -nr; }; foo"
-; Blames against the 'upstream' branch
-  blameup = !git blamebranch $(git ancestor)
-; Blames a for a few files. The length of arguments is relatively limited, it'll
-; fail after ~100 files or so, depending on the actual string (total file names)
-; length.
-  blamefiles = "!foo() { for i in \"$@\"; do git blame --date=short -C $i | cut -d '(' -f 2 | cut -d ' ' -f 1; done | sort -f | uniq -ic | sort -nr; }; foo"
-  new = "!f() { git fetch && git checkout -b $@ origin/master; }; f"
+
+  ; Querying
+
+  ; status but don't look into submodules.
+  st = status --ignore-submodule=all -sb
+  ; diff against merge base using vimdiff.
   df = "!git difftool \"$(git ancestor)\" -- "
+  ; log with patches until merge base.
   lp = "log -p @{u}.."
-  p = pull --rebase
+  ; Prints untracked files
+  untracked = "!cd \"$(git rev-parse --show-cdup)\" && git clean -n -d | cut -c 14- | sed -e \"s/\\/$//\" | while read i; do echo /$i; done"
+  ; Prints the repo's description if it exists.
+  which = !cat $(git rev-parse --git-dir)/description
+  ; Prints a graph about the current state of the branches
+  confused = log --graph --decorate --pretty=format:\"%Cgreen%h%d %Cred%ad %Creset%s\" --branches --date-order --date=short --tags
+  ; Returns the 'ancestor' hash at which the current branch is based on
+  ancestor = !git merge-base HEAD @{u}
+  ; Smaller log against the ancestor
+  compact-log = !git log --pretty=format:\"%B\" $(git ancestor)..HEAD
+  ; Blames against a branch given as an argument
+  blamebranch = "!foo() { git diff --name-only \"$@\" | while read i; do git blame --date=short -C $i | cut -d '(' -f 2 | cut -d ' ' -f 1; done | sort -f | uniq -ic | sort -nr; }; foo"
+  ; Blames against the 'upstream' branch
+  blameup = !git blamebranch $(git ancestor)
+  ; Blames a for a few files. The length of arguments is relatively limited, it'll
+  ; fail after ~100 files or so, depending on the actual string (total file names)
+  ; length.
+  blamefiles = "!foo() { for i in \"$@\"; do git blame --date=short -C $i | cut -d '(' -f 2 | cut -d ' ' -f 1; done | sort -f | uniq -ic | sort -nr; }; foo"
+  ; Generate a graph
+  graphviz = "!f() { echo 'digraph git {' ; git log --pretty='format:  %h -> { %p }' \"$@\" | sed 's/[0-9a-f][0-9a-f]*/\"&\"/g' ; echo '}'; }; f"
+
+  ; Editing
+
+  ; Squash all the commits against the ancestor into a single commit
+  squash = "!OLDLOG=$(git compact-log); git reset --soft $(git ancestor) && git commit -m \"$OLDLOG\""
+  ; Run sed on all files
+  sed = "!git ls-files -- . | xargs -L 1 sed -i"
+  ; Delete branch
+  bd = branch -D
+  ; Add all untracked files to .git/info/exclude
+  ignoreall = "!cd \"$(git rev-parse --show-cdup)\" && git clean -n -d | cut -c 14- | sed -e \"s/\\/$//\" >> $(git rev-parse --git-dir)/info/exclude"
+  ; Rebase against the ancestor
+  reroll = !git rebase -i $(git ancestor)
+  ; TODO(maruel): How to not hardcode origin/master?
+  new = "!f() { git fetch && git checkout -b $@ origin/master; }; f"
 
 
 ; Soon. Just need to finish some clean up first.
