git: Enable commitGraph, disable pager
The pager is too verbose, I don't think I'll like it much

--- a/configs/.config/git/config
+++ b/configs/.config/git/config
@@ -21,8 +21,9 @@
   deltaBaseCacheLimit = 1G
   askpass = 
   precomposeunicode = true
+  commitGraph = true
   ; Requires https://github.com/dandavison/delta to be installed.
-  pager = delta
+  ;pager = delta
 
 
 ; Requires https://github.com/dandavison/delta to be installed.
