--- a/configs/.config/git/config
+++ b/configs/.config/git/config
@@ -28,17 +28,16 @@
 
 ; Reduce noise.
 [advice]
-	detachedHead = false
+  detachedHead = false
 
 
 ; Requires https://github.com/dandavison/delta to be installed.
+; In practice I didn't find it that great, so I'll likely remove it.
 [interactive]
-  diffFilter = delta --color-only
-
+  ; diffFilter = delta --color-only
 [delta]
   features = side-by-side line-numbers decorations
   whitespace-error-style = 22 reverse
-
 [delta "decorations"]
   commit-decoration-style = bold yellow box ul
   file-style = bold yellow ul
