--- a/.gitmodules
+++ b/.gitmodules
@@ -8,5 +8,5 @@
 	path = configs/.vim/bundle/vim-go
 	url = https://github.com/fatih/vim-go.git
 [submodule "ctrlp.vim"]
-	path = ctrlp.vim
+	path = configs/.vim/bundle/ctrlp.vim
 	url = https://github.com/ctrlpvim/ctrlp.vim
