--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "ctrlp.vim"]
 	path = configs/.vim/bundle/ctrlp.vim
 	url = https://github.com/ctrlpvim/ctrlp.vim
+[submodule "configs/.vim/bundle/vim-fugitive"]
+	path = configs/.vim/bundle/vim-fugitive
+	url = https://github.com/tpope/vim-fugitive
