tmux: resize more aggressively

--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -58,6 +58,7 @@ set-option -g visual-bell on
 
 # Misc
 set-option -g history-limit 100000
+set-window-option -g aggressive-resize
 
 # Load either hostname specific or OS specific configurations.
 if "test -f ~/.config/tmux/${UNAME}.conf" "source ~/.config/tmux/${UNAME}.conf"
