--- a/configs/.config/git/config
+++ b/configs/.config/git/config
@@ -1,8 +1,3 @@
-; General nicer UI with colors.
-[color]
-  ui = auto
-
-
 ; Super power git grep:
 [grep]
   patternType = perl
@@ -84,7 +79,7 @@
 ; elsewhere.
 [branch]
   autosetupmerge = always
-  autosetuprebase = local
+  autosetuprebase = always
 [pull]
   rebase = true
 
