--- a/configs/.config/git/config
+++ b/configs/.config/git/config
@@ -148,6 +148,7 @@
   ; Create a CL. Requires Commit-Id: footer script.
   ; TODO(maruel): Use git for-each-ref --format='%(refname:short)' "$(git symbolic-ref -q HEAD)"
   gerrit = push origin HEAD:refs/for/main
+  gerritmaster = push origin HEAD:refs/for/master
   ; Create a CL and trigger the label Commit-Queue.
   gerritcq = push origin HEAD:refs/for/main%l=Commit-Queue+1
 
