--- a/configs/.config/git/config
+++ b/configs/.config/git/config
@@ -167,4 +167,11 @@
   defaultRemote = origin
 
 
+[filter "lfs"]
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
+
+
 ; Add user.name and user.email here.
