Fixes in neovim and tmux
- Force tmux to use 256 colors
- Update README.md neovim key bindings
- Copy paste vim color scheme into neovim
- Improve key binding
- Enable telescope file browser
- Disable nvim-tree, use telescope file browser instead
- Enable <leader>fg to find in hidden files

--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -60,6 +60,10 @@ set-option -g visual-bell on
 set-option -g history-limit 100000
 set-window-option -g aggressive-resize
 
+# Uses 256 colors.
+set -g default-terminal "xterm-256color"
+set -ag terminal-overrides ",xterm-256color:Tc"
+
 # Load either hostname specific or OS specific configurations.
 if "test -f ~/.config/tmux/${UNAME}.conf" "source ~/.config/tmux/${UNAME}.conf"
 if "test -f ~/.config/tmux/${HOSTNAME}.conf" "source ~/.config/tmux/${HOSTNAME}.conf"
