tmux: enable bel again, update gemini nvim

--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -54,7 +54,7 @@ set-option -g bell-action any
 set-option -g display-time 500
 set-option -g monitor-activity on
 set-option -g monitor-bell on
-set-option -g visual-bell on
+set-option -g visual-bell off
 
 # Misc
 set-option -g history-limit 100000
