--- a/rsc/Dockerfile
+++ b/rsc/Dockerfile
@@ -9,14 +9,15 @@ ENV DEBIAN_FRONTEND=noninteractive
 # Install dependencies
 RUN apt-get update -q && \
     apt-get install -q -y --no-install-recommends \
-    build-essential \
-    ca-certificates \
-    curl \
-    git \
-    less \
-    openssh-server \
-    rsync \
-    shared-mime-info && \
+		build-essential \
+		ca-certificates \
+		curl \
+		git \
+		less \
+		openssh-server \
+		rsync \
+		shared-mime-info && \
+	apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
 # Configure SSH
@@ -33,25 +34,25 @@ COPY start.sh /root/start.sh
 
 # Configure Bash (for everyone)
 RUN curl -sSL -o /opt/git-completion.bash https://raw.githubusercontent.com/git/git/master/contrib/completion/git-completion.bash && \
-    echo 'export SHELL' >> /etc/bash.bashrc && \
-    echo 'source /opt/git-completion.bash' >> /etc/bash.bashrc && \
-    echo 'source /etc/bash_completion.d/git-prompt' >> /etc/bash.bashrc && \
-    echo 'GIT_PS1_DESCRIBE_STYLE=tag' >> /etc/bash.bashrc && \
-    echo 'GIT_PS1_SHOWCOLORHINTS=1' >> /etc/bash.bashrc && \
-    echo 'GIT_PS1_SHOWDIRTYSTATE=1' >> /etc/bash.bashrc && \
-    echo 'GIT_PS1_SHOWSTASHSTATE=1' >> /etc/bash.bashrc && \
-    echo 'GIT_PS1_SHOWUNTRACKEDFILES=1' >> /etc/bash.bashrc && \
-    echo 'GIT_PS1_SHOWUPSTREAM=auto' >> /etc/bash.bashrc && \
-    echo 'function __my_ps1 {' >> /etc/bash.bashrc && \
-    echo '  __git_ps1 \\' >> /etc/bash.bashrc && \
-    echo '    "\\[\\e]0;\\W\\a\\]\\[\\e[0m\\]\\$(_V=\\$\\\?; if [ \\$_V != 0 ]; then echo -e -n \"\\\\[\\\\e[36m\\\\]$_V\\\\[\\\\e[0m\\\\]\" ; fi)" \\' >> /etc/bash.bashrc && \
-    echo '    "\\[\\e[36m\\]\\w\\[\\e[0m\\]🐳 "' >> /etc/bash.bashrc && \
-    echo '}' >> /etc/bash.bashrc && \
-    echo 'PROMPT_COMMAND=__my_ps1' >> /etc/bash.bashrc && \
-    echo 'export LS_OPTIONS="--color=auto"' >> /etc/bash.bashrc && \
-    echo 'eval "$(dircolors)"' >> /etc/bash.bashrc && \
-    echo "alias ls='ls \$LS_OPTIONS'" >> /etc/bash.bashrc && \
-    echo "alias ll='ls \$LS_OPTIONS -la'" >> /etc/bash.bashrc
+    echo 'export SHELL' >> /etc/profile.d/mydevenv.sh && \
+    echo 'source /opt/git-completion.bash' >> /etc/profile.d/mydevenv.sh && \
+    echo 'source /etc/bash_completion.d/git-prompt' >> /etc/profile.d/mydevenv.sh && \
+    echo 'GIT_PS1_DESCRIBE_STYLE=tag' >> /etc/profile.d/mydevenv.sh && \
+    echo 'GIT_PS1_SHOWCOLORHINTS=1' >> /etc/profile.d/mydevenv.sh && \
+    echo 'GIT_PS1_SHOWDIRTYSTATE=1' >> /etc/profile.d/mydevenv.sh && \
+    echo 'GIT_PS1_SHOWSTASHSTATE=1' >> /etc/profile.d/mydevenv.sh && \
+    echo 'GIT_PS1_SHOWUNTRACKEDFILES=1' >> /etc/profile.d/mydevenv.sh && \
+    echo 'GIT_PS1_SHOWUPSTREAM=auto' >> /etc/profile.d/mydevenv.sh && \
+    echo 'function __my_ps1 {' >> /etc/profile.d/mydevenv.sh && \
+    echo '  __git_ps1 \\' >> /etc/profile.d/mydevenv.sh && \
+    echo '    "\\[\\e]0;\\W\\a\\]\\[\\e[0m\\]\\$(_V=\\$\\\?; if [ \\$_V != 0 ]; then echo -e -n \"\\\\[\\\\e[36m\\\\]$_V\\\\[\\\\e[0m\\\\]\" ; fi)" \\' >> /etc/profile.d/mydevenv.sh && \
+    echo '    "\\[\\e[36m\\]\\w\\[\\e[0m\\]🐳 "' >> /etc/profile.d/mydevenv.sh && \
+    echo '}' >> /etc/profile.d/mydevenv.sh && \
+    echo 'PROMPT_COMMAND=__my_ps1' >> /etc/profile.d/mydevenv.sh && \
+    echo 'export LS_OPTIONS="--color=auto"' >> /etc/profile.d/mydevenv.sh && \
+    echo 'eval "$(dircolors)"' >> /etc/profile.d/mydevenv.sh && \
+    echo "alias ls='ls \$LS_OPTIONS'" >> /etc/profile.d/mydevenv.sh && \
+    echo "alias ll='ls \$LS_OPTIONS -la'" >> /etc/profile.d/mydevenv.sh
 
 # Install Neovim (as root)
 RUN ARCH=$(uname -m | sed s/aarch64/arm64/) && \
@@ -63,7 +64,7 @@ RUN ARCH=$(uname -m | sed s/aarch64/arm64/) && \
 # Install Go (as root)
 RUN ARCH=$(uname -m | sed s/aarch64/arm64/ | sed s/x86_64/amd64/) && \
     curl -sSL -o- https://go.dev/dl/go${GO_VERSION}.linux-${ARCH}.tar.gz | tar -C /usr/local -xzf - && \
-    echo PATH="/usr/local/go/bin:\${PATH}" >> /etc/bash.bashrc
+    echo PATH="/usr/local/go/bin:\${PATH}" >> /etc/profile.d/mydevenv.sh
 
 # Create user "user"
 RUN adduser --disabled-password user
@@ -72,7 +73,7 @@ RUN su user -c "mkdir -p /home/user/.ssh /home/user/.config/git"
 COPY sketch/container_user_identity.pub /home/user/.ssh/authorized_keys
 COPY config/git/config /home/user/.config/git/config
 COPY config/git/ignore /home/user/.config/git/ignore
-RUN echo "cd /app" >> /home/user/.bashrc
+RUN echo "cd /app" >> /etc/profile.d/mydevenv.sh
 RUN chown -R user:user /home/user/.ssh /home/user/.config
 RUN chmod 0700 /home/user/.ssh
 RUN chmod 0400 /home/user/.ssh/authorized_keys
@@ -83,6 +84,11 @@ RUN su user -c 'curl -sSL -o- https://raw.githubusercontent.com/nvm-sh/nvm/v${NV
     nvm install --no-progress node && \
 	npm install -g @google/gemini-cli @anthropic-ai/claude-code && \
 	echo "alias gemini=\"\\\\$(which gemini) --yolo\"" >> /home/user/.bashrc'
+
+# Install Go packages (as user)
+RUN su user -c '/usr/local/go/bin/go install golang.org/x/tools/cmd/goimports@latest && \
+	/usr/local/go/bin/go install golang.org/x/tools/gopls@latest && \
+	/usr/local/go/bin/go clean -cache -testcache -modcache'
 
 # Create app directory (as user)
 RUN mkdir /app
