--- a/rsc/Dockerfile
+++ b/rsc/Dockerfile
@@ -64,7 +64,7 @@ RUN ARCH=$(uname -m | sed s/aarch64/arm64/) && \
 # Install Go (as root)
 RUN ARCH=$(uname -m | sed s/aarch64/arm64/ | sed s/x86_64/amd64/) && \
     curl -sSL -o- https://go.dev/dl/go${GO_VERSION}.linux-${ARCH}.tar.gz | tar -C /usr/local -xzf - && \
-    echo PATH="/usr/local/go/bin:\${PATH}" >> /etc/profile.d/mydevenv.sh
+    echo PATH="/usr/local/go/bin:\${HOME}/go/bin:\${PATH}" >> /etc/profile.d/mydevenv.sh
 
 # Create user "user"
 RUN adduser --disabled-password user
