--- a/rsc/Dockerfile.base
+++ b/rsc/Dockerfile.base
@@ -14,13 +14,24 @@ RUN export DEBIAN_FRONTEND=noninteractive && \
 		build-essential \
 		ca-certificates \
 		curl \
+		ffmpeg \
 		git \
+		gpg \
 		less \
+		libgtk-3-0 \
 		openssh-server \
+		python3 \
+		python3-venv \
 		rsync \
+		xvfb \
 		shared-mime-info && \
 	apt-get clean && \
     rm -rf /var/lib/apt/lists/*
+
+# Enable Firefox. It's faster to download it than to use apt.
+RUN curl -sSL 'https://download.mozilla.org/?product=firefox-latest-ssl&os=linux64' | \
+	tar xJ -C /opt && \
+	ln -s /opt/firefox/firefox /usr/local/bin/firefox
 
 # Configure SSH
 RUN echo 'PasswordAuthentication no' >> /etc/ssh/sshd_config.d/mydevenv.conf && \
