--- a/rsc/Dockerfile.base
+++ b/rsc/Dockerfile.base
@@ -18,20 +18,28 @@ RUN export DEBIAN_FRONTEND=noninteractive && \
 		git \
 		gpg \
 		less \
-		libgtk-3-0 \
 		openssh-server \
 		python3 \
 		python3-venv \
 		rsync \
-		xvfb \
-		shared-mime-info && \
+		shared-mime-info \
+		wget \
+		xvfb && \
 	apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
-# Enable Firefox. It's faster to download it than to use apt.
-RUN curl -sSL 'https://download.mozilla.org/?product=firefox-latest-ssl&os=linux64' | \
-	tar xJ -C /opt && \
-	ln -s /opt/firefox/firefox /usr/local/bin/firefox
+# Install Firefox from Mozilla's official APT repository
+RUN curl -sSL -o /etc/apt/keyrings/packages.mozilla.org.asc https://packages.mozilla.org/apt/repo-signing-key.gpg && \
+	echo 'deb [signed-by=/etc/apt/keyrings/packages.mozilla.org.asc] https://packages.mozilla.org/apt mozilla main' > /etc/apt/sources.list.d/mozilla.list && \
+	echo 'Package: *\nPin: origin packages.mozilla.org\nPin-Priority: 1000' > /etc/apt/preferences.d/mozilla && \
+	apt-get update -q && \
+	apt-get install -y --no-install-recommends firefox && \
+	apt-get clean
+
+# Install Geckodriver
+RUN GECKODRIVER_VERSION=$(curl -sSL "https://api.github.com/repos/mozilla/geckodriver/releases/latest" | grep "tag_name" | cut -d : -f 2 | tr -d '", ' | cut -c2-) && \
+	curl -sSL "https://github.com/mozilla/geckodriver/releases/download/v${GECKODRIVER_VERSION}/geckodriver-v${GECKODRIVER_VERSION}-linux64.tar.gz" | tar xz -C /usr/local/bin && \
+	chmod +x /usr/local/bin/geckodriver
 
 # Configure SSH
 RUN echo 'PasswordAuthentication no' >> /etc/ssh/sshd_config.d/mydevenv.conf && \
