Use jq instead of grepping

--- a/rsc/Dockerfile.base
+++ b/rsc/Dockerfile.base
@@ -7,9 +7,10 @@
 # We don't need it to be stuck on old images so just fetch whatever is current latest.
 FROM debian:latest
 
+ENV DEBIAN_FRONTEND=noninteractive
+
 # Install dependencies
-RUN export DEBIAN_FRONTEND=noninteractive && \
-	apt-get update -q && \
+RUN apt-get update -q && \
     apt-get install -q -y --no-install-recommends \
 		build-essential \
 		ca-certificates \
@@ -17,6 +18,7 @@ RUN export DEBIAN_FRONTEND=noninteractive && \
 		ffmpeg \
 		git \
 		gpg \
+		jq \
 		less \
 		openssh-server \
 		python3 \
@@ -37,8 +39,8 @@ RUN curl -sSL -o /etc/apt/keyrings/packages.mozilla.org.asc https://packages.moz
 	apt-get clean
 
 # Install Geckodriver
-RUN GECKODRIVER_VERSION=$(curl -sSL "https://api.github.com/repos/mozilla/geckodriver/releases/latest" | grep "tag_name" | cut -d : -f 2 | tr -d '", ' | cut -c2-) && \
-	curl -sSL "https://github.com/mozilla/geckodriver/releases/download/v${GECKODRIVER_VERSION}/geckodriver-v${GECKODRIVER_VERSION}-linux64.tar.gz" | tar xz -C /usr/local/bin && \
+RUN GECKODRIVER_URL=$(curl -sSL "https://api.github.com/repos/mozilla/geckodriver/releases/latest" curl -s https://api.github.com/repos/mozilla/geckodriver/releases/latest | jq -r '.assets[] | select(.name | contains("linux64")) | .browser_download_url' | grep -v \.asc) && \
+	curl -sSL $GECKODRIVER_URL | tar xz -C /usr/local/bin && \
 	chmod +x /usr/local/bin/geckodriver
 
 # Configure SSH
