Clean up Dockerfile.base

--- a/rsc/Dockerfile.base
+++ b/rsc/Dockerfile.base
@@ -44,11 +44,8 @@ RUN GECKODRIVER_URL=$(curl -sSL "https://api.github.com/repos/mozilla/geckodrive
 	chmod +x /usr/local/bin/geckodriver
 
 # Configure SSH
-RUN echo 'PasswordAuthentication no' >> /etc/ssh/sshd_config.d/mydevenv.conf && \
-    echo 'PubkeyAuthentication yes' >> /etc/ssh/sshd_config.d/mydevenv.conf && \
-    echo 'HostbasedAuthentication yes' >> /etc/ssh/sshd_config.d/mydevenv.conf && \
-    echo 'TrustedUserCAKeys /etc/ssh/container_ca.pub' >> /etc/ssh/sshd_config.d/mydevenv.conf
 RUN rm -f /etc/ssh/ssh_host_*_key /etc/ssh/ssh_host_*_key.pub
+COPY etc/ssh/sshd_config.d/mydevenv.conf /etc/ssh/sshd_config.d/mydevenv.conf
 COPY sketch/container_server_identity /etc/ssh/ssh_host_rsa_key
 COPY sketch/container_server_identity.pub /etc/ssh/ssh_host_rsa_key.pub
 COPY sketch/container_ca.pub /etc/ssh/
@@ -56,26 +53,8 @@ RUN echo 'Welcome to mydevenv!' > /etc/motd
 COPY start.sh /root/start.sh
 
 # Configure Bash (for everyone)
-RUN curl -sSL -o /opt/git-completion.bash https://raw.githubusercontent.com/git/git/master/contrib/completion/git-completion.bash && \
-    echo 'export SHELL' >> /etc/profile.d/mydevenv.sh && \
-    echo 'source /opt/git-completion.bash' >> /etc/profile.d/mydevenv.sh && \
-    echo 'source /etc/bash_completion.d/git-prompt' >> /etc/profile.d/mydevenv.sh && \
-    echo 'GIT_PS1_DESCRIBE_STYLE=tag' >> /etc/profile.d/mydevenv.sh && \
-    echo 'GIT_PS1_SHOWCOLORHINTS=1' >> /etc/profile.d/mydevenv.sh && \
-    echo 'GIT_PS1_SHOWDIRTYSTATE=1' >> /etc/profile.d/mydevenv.sh && \
-    echo 'GIT_PS1_SHOWSTASHSTATE=1' >> /etc/profile.d/mydevenv.sh && \
-    echo 'GIT_PS1_SHOWUNTRACKEDFILES=1' >> /etc/profile.d/mydevenv.sh && \
-    echo 'GIT_PS1_SHOWUPSTREAM=auto' >> /etc/profile.d/mydevenv.sh && \
-    echo 'function __my_ps1 {' >> /etc/profile.d/mydevenv.sh && \
-    echo '  __git_ps1 \\' >> /etc/profile.d/mydevenv.sh && \
-    echo '    "\\[\\e]0;\\W\\a\\]\\[\\e[0m\\]\\$(_V=\\$\\\?; if [ \\$_V != 0 ]; then echo -e -n \"\\\\[\\\\e[36m\\\\]$_V\\\\[\\\\e[0m\\\\]\" ; fi)" \\' >> /etc/profile.d/mydevenv.sh && \
-    echo '    "\\[\\e[36m\\]\\w\\[\\e[0m\\]🐳 "' >> /etc/profile.d/mydevenv.sh && \
-    echo '}' >> /etc/profile.d/mydevenv.sh && \
-    echo 'PROMPT_COMMAND=__my_ps1' >> /etc/profile.d/mydevenv.sh && \
-    echo 'export LS_OPTIONS="--color=auto"' >> /etc/profile.d/mydevenv.sh && \
-    echo 'eval "$(dircolors)"' >> /etc/profile.d/mydevenv.sh && \
-    echo "alias ls='ls \$LS_OPTIONS'" >> /etc/profile.d/mydevenv.sh && \
-    echo "alias ll='ls \$LS_OPTIONS -la'" >> /etc/profile.d/mydevenv.sh
+RUN curl -sSL -o /opt/git-completion.bash https://raw.githubusercontent.com/git/git/master/contrib/completion/git-completion.bash
+COPY etc/profile.d/mydevenv.sh /etc/profile.d/mydevenv.sh
 
 # Create user "user"
 RUN adduser --disabled-password user
