mydevenv: extract code into separate files

--- a/rsc/Dockerfile
+++ b/rsc/Dockerfile
@@ -8,14 +8,13 @@ FROM mydevenv.base
 ARG ENV_FILE
 
 # Settings from the script. We'll want to eventually just use whatever is the current latest.
-ENV GO_VERSION=1.24.4
-ENV NVM_VERSION=0.40.3
+ENV GO_VERSION=1.25.0
 
 # Copy the file setting environment variables.
-COPY ${ENV_FILE:+$ENV_FILE} ${ENV_FILE:+/home/user/.env}
+COPY --chown=user:user ${ENV_FILE:+$ENV_FILE} ${ENV_FILE:+/home/user/.env}
 
 # Copy the aliases
-COPY bash_aliases /home/user/.bash_aliases
+COPY --chown=user:user bash_aliases /home/user/.bash_aliases
 
 # Install latest Neovim (as root)
 RUN ARCH=$(uname -m | sed s/aarch64/arm64/) && \
@@ -29,17 +28,13 @@ RUN ARCH=$(uname -m | sed s/aarch64/arm64/ | sed s/x86_64/amd64/) && \
     curl -sSL -o- https://go.dev/dl/go${GO_VERSION}.linux-${ARCH}.tar.gz | tar -C /usr/local -xzf - && \
     echo PATH="/usr/local/go/bin:\${HOME}/go/bin:\${PATH}" >> /etc/profile.d/mydevenv.sh
 # Install Go packages (as user)
-RUN su user -c '/usr/local/go/bin/go install golang.org/x/tools/cmd/goimports@latest && \
-	/usr/local/go/bin/go install golang.org/x/tools/gopls@latest && \
-	/usr/local/go/bin/go clean -cache -testcache -modcache'
+COPY --chown=user:user home/user/setup/go.sh /home/user/setup/go.sh
+RUN su user -c /home/user/setup/go.sh
 
 # Install nvm, node.js, npm, Claude Code and Gemini CLI (as user)
-RUN su user -c 'curl -sSL -o- https://raw.githubusercontent.com/nvm-sh/nvm/v${NVM_VERSION}/install.sh | bash && \
-    . ~/.nvm/nvm.sh && \
-    nvm install --no-progress node && \
-    npm install -g @anthropic-ai/claude-code @google/gemini-cli @openai/codex @qwen-code/qwen-code@latest \
-	'
-	
+COPY --chown=user:user home/user/setup/nodejs.sh /home/user/setup/nodejs.sh
+RUN su user -c /home/user/setup/nodejs.sh
+
 # https://github.com/google-gemini/gemini-cli/blob/main/docs/cli/configuration.md'
 COPY etc/gemini-cli/settings.json /etc/gemini-cli/settings.json
 
