--- a/rsc/Dockerfile.base
+++ b/rsc/Dockerfile.base
@@ -64,8 +64,7 @@ RUN adduser --disabled-password user
 #RUN useradd -ms /bin/bash user && mkdir -p /app && chown user:user /app
 RUN su user -c "mkdir -p /home/user/.ssh /home/user/.config/git"
 COPY --chown=user:user sketch/container_user_identity.pub /home/user/.ssh/authorized_keys
-COPY --chown=user:user config/git/config /home/user/.config/git/config
-COPY --chown=user:user config/git/ignore /home/user/.config/git/ignore
+COPY --chown=user:user home/user/.config/git/* /home/user/.config/git/
 RUN echo "cd /app" >> /etc/profile.d/mydevenv.sh
 RUN chmod 0700 /home/user/.ssh
 RUN chmod 0400 /home/user/.ssh/authorized_keys
