Seems to help but codex is still not yolo'ing

--- a/rsc/Dockerfile
+++ b/rsc/Dockerfile
@@ -12,9 +12,8 @@ ENV GO_VERSION=1.25.0
 
 # Copy the file setting environment variables.
 COPY --chown=user:user ${ENV_FILE:+$ENV_FILE} ${ENV_FILE:+/home/user/.env}
-
-# Copy the aliases
-COPY --chown=user:user home/user/.bash_aliases /home/user/.bash_aliases
+# Copy the aliases and setup scripts.
+COPY --chown=user:user home/user/ /home/user/
 
 # Install latest Neovim (as root)
 RUN ARCH=$(uname -m | sed s/aarch64/arm64/) && \
@@ -28,12 +27,9 @@ RUN ARCH=$(uname -m | sed s/aarch64/arm64/ | sed s/x86_64/amd64/) && \
     curl -sSL -o- https://go.dev/dl/go${GO_VERSION}.linux-${ARCH}.tar.gz | tar -C /usr/local -xzf - && \
     echo PATH="/usr/local/go/bin:\${HOME}/go/bin:\${PATH}" >> /etc/profile.d/mydevenv.sh
 # Install Go packages (as user)
-COPY --chown=user:user home/user/setup/go.sh /home/user/setup/go.sh
 RUN su user -c /home/user/setup/go.sh
 
 # Install nvm, node.js, npm, Claude Code and Gemini CLI (as user)
-COPY --chown=user:user home/user/setup/nodejs.sh /home/user/setup/nodejs.sh
-COPY --chown=user:user home/user/setup/llm.sh /home/user/setup/llm.sh
 RUN su user -c /home/user/setup/nodejs.sh
 RUN su user -c /home/user/setup/llm.sh
 
